2006-06-19  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/IconUIResource/constructor.java: 
	New test.

2006-06-18  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am (harness_files): Add gnu/testlet/config.java.
	(gnu/testlet/config.class): Remove target.
	* Makefile.in: Regenerate.

2006-06-18  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/testlet/java/awt/GridBagLayout/AdjustForGravity.java: New
	test.

2006-06-18  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/gnu/java/security/util/TestOfPrime2.java: Removed.
	* gnu/testlet/gnu/java/security/jce/TestOfKeyPairGenerator.java:
	Remove unused imports.
	Use isProbablePrime() in BigInteger instead of Prime2.
	* gnu/testlet/gnu/java/security/key/dss/TestOfDSSKeyGeneration.java: Likewise.
	* gnu/testlet/gnu/javax/crypto/key/srp6/TestOfSRPKeyGeneration.java: Likewise.
	* gnu/testlet/gnu/javax/crypto/key/dh/TestOfDHKeyGeneration.java: Likewise.
	* gnu/testlet/gnu/java/security/key/rsa/TestOfRSAKeyGeneration.java: Likewise.

2006-06-17  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/gnu/javax/crypto/jce/TestOfCipherEngineInit.java (input):
	New field.
	(testECB): Shortned the messages.
	Use above field.
	(testNotECB): Likewise.
	(testInitWithParameterSpec): Added checks for non-uniformity of IVs.

2006-06-16  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/DefaultComboBoxModel/removeElement.java
	(events): New field,
	(index0): Removed,
	(index1): Removed,
	(type): Removed,
	(contentsChanged): Add event to list,
	(intervalAdded): Likewise,
	(intervalRemoved): Likewise,
	(test): Updated checks to look for event or events in list.

2006-06-16  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/DefaultButtonModel/setSelected.java
	(lastItemEvent): New field,
	(itemChanged): New method,
	(test): Check for required item event.

2006-06-16  David Gilbert  <david.gilbert@object-refinery.com>
