@@ -1,3 +1,8 @@
+2006-06-19  Mario Torre  <neugens@limasoftware.net>
+
+	* gnu/testlet/java/util/prefs: New package added.
+	* gnu/testlet/java/util/prefs/PreferenceTest.java: New test.
+
 2006-06-19  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* gnu/testlet/javax/swing/plaf/IconUIResource/constructor.java: 
